8.3 throw and throws - tests