@@ -2,23 +2,22 @@ package com.kodilla.exception.io;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.stream.Stream;
 
 public class FileReader {
-    public void readFile() throws FileReaderException{
+    public void readFile(final String fileName) throws FileReaderException{
         ClassLoader classLoader = getClass().getClassLoader();
-        File file = new File(classLoader.getResource("names.txt").getFile());
 
-        try(Stream<String> fileLines = Files.lines(Paths.get(file.getPath()))) {
+        try(Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(fileName).toURI()))) {
             fileLines.forEach(System.out::println);
-        }catch(IOException e){
+        }catch (Exception e){
             throw new FileReaderException();
-        }finally {
+        } finally {
             System.out.println("To jest element finally bloku try-catch-finally");
         }
-        System.out.println(file.getPath());
     }
 }
